--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -42,6 +42,10 @@
     padding-bottom: 40px;
     height: 60vh;
 }
+
+@media only screen and (max-width:800px) {
+.footer{height:100vh;}
+}
 /*END FOOTER SOCIAL DESIGN*/
 .single_footer{}
 @media only screen and (max-width:768px) {
@@ -194,6 +198,7 @@ border:0px;
 
 .footer-100 {
   width: 100%;
+  margin-top: 10%;
 }
 
 .border-footer {
