--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -47,3 +47,10 @@
     transform: rotate(-90deg);
   }
 }
+
+.logo-oma-home {
+  position: absolute;
+  width: 100px;
+  top: 3vh;
+  right: 3vw;
+}
