--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
             <div class="container">
               <div class="footer-100">
                 <div class="row">
-                    <div class="col-12 col-lg-4">
+                    <div class="col-12 col-md-4 col-lg-4">
                         <div class="single_footer">
                             <h4>Ōma cinema</h4>
                             <ul>
@@ -14,7 +14,7 @@
                             </ul>
                         </div>
                     </div><!--- END COL -->
-                    <div class="col-12 col-lg-4">
+                    <div class="col-12 col-md-4 col-lg-4">
                         <div class="single_footer single_footer_address">
                             <h4>Concept</h4>
                             <ul>
@@ -25,7 +25,7 @@
                             </ul>
                         </div>
                     </div><!--- END COL -->
-                    <div class="col-12 col-lg-4">
+                    <div class="col-12 col-md-4  col-lg-4">
                         <div class="single_footer single_footer_address">
                             <h4>Subscribe today</h4>
                             <div class="signup_form">
