--- a/app/views/cinemas/index.html.erb
+++ b/app/views/cinemas/index.html.erb
@@ -23,12 +23,34 @@
   </nav>
   <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
-  <section id="section1" class="cd-section home1">
-    <div class="container">
-      <div class="row flex-column">
-        <h1>Location</h1>
-        <a href="#section2"><i class="fas fa-chevron-down fa-3x"></i></a>
+  <section id="section1" class="cd-section">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="../assets/geode.jpg" alt="First slide">
+          <p>Bonjour</p>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../assets/vue_interieur.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../assets/vue_interieur_salle.jpg" alt="Third slide">
+        </div>
       </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </section><!-- cd-section -->
 
