--- a/app/assets/stylesheets/components/_caroussel.scss
+++ b/app/assets/stylesheets/components/_caroussel.scss
@@ -1,15 +1,13 @@
 // Carousel home
 .carousel-cell {
   width: 17vw !important;
+  max-width: 200px;
   padding: 20px;
 }
 
-.carousel-cell {
-  img:hover {
-    width: 20vw;
-  }
+@media only screen and (max-width:992px) {
+  .carousel-cell a{width:300px;}
 }
-
 
 .carousel-wrapper {
   position: relative;
