--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -205,6 +205,10 @@ border:0px;
   .footer-100{margin-top:70%}
 }
 
+@media only screen and (max-width:768px) {
+  .row{margin-right:0px}
+}
+
 .border-footer {
   border-top: 1px solid rgba(255, 255, 255, 0.4);
 }
