--- a/app/assets/stylesheets/components/_experience.scss
+++ b/app/assets/stylesheets/components/_experience.scss
@@ -4,6 +4,12 @@
   padding: 0px !important;
 }
 
+.soon {
+  background-image: url("./geode.jpg");
+  background-size: cover;
+  padding: 0px !important;
+}
+
 .experience2 {
   background-image: url("./geode.jpg");
   background-size: cover;
