--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,6 +54,13 @@
     <div class="container justify-content-center">
       <div>
         <img src="../assets/logo.png" alt="logo oma" class="logo-oma-home">
+        <audio controls autoplay="true">
+          <source src="../assets/the-fugees.mp3" autoplay="true" type="audio/mpeg">
+          <source src="monAudio.ogg" type="audio/ogg">
+          <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
+             un <a href="myAudio.mp4">lien vers le fichier audio</a> pour le
+             télécharger.</p>
+        </audio>
       </div>
       <div class="row text-left">
         <div class="col-12 titre-home">
