--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,7 +32,7 @@
       <a><li><%= link_to "HOME", root_path %></li></a>
       <a><li><%= link_to "WHAT IS ŌMA ?", oma_path %></li></a>
       <a><li><%= link_to "EXPERIENCE", experience_path %></li></a>
-      <a><li><%= link_to "LOCATIONS", cinemas_path %></li></a>
+      <a><li><%= link_to "LOCATIONS", soon_path %></li></a>
       <a><li><%= link_to "CONTACT", contact_path %></li></a>
       <a><li><%= link_to "PRESS", articles_path %></li></a>
       <% else %>
