--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -45,7 +45,9 @@
     <div class="container justify-content-center">
       <div class="row justify-content-center">
         <h1>What is Ōma</h1>
-        <a href="#section2"><i class="fas fa-chevron-down fa-3x"></i></a>
+        <div class="row justify-content-center" style="position: absolute; bottom:5vh;">
+        <a href="#section2" class="cd-scroll-down"><i class="fas fa-chevron-down fa-3x"></i></a>
+        </div>
       </div>
     </div>
   </section><!-- cd-section -->
