--- a/app/assets/stylesheets/components/_contact.scss
+++ b/app/assets/stylesheets/components/_contact.scss
@@ -11,3 +11,13 @@
   font-size: 40px;
   font-weight: bold;
 }
+
+
+@media only screen and  (max-width: 576px) {
+.name-contact {padding-right: 0px;}
+}
+
+@media only screen and  (max-width: 576px) {
+.email-contact {padding-left: 0px;}
+}
+
