--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -19,7 +19,7 @@
 
   <section id="section1" class="cd-section home-contact">
     <div class="container flex-column justify-content-center">
-      <div class="row justify-content-center pb-5">
+      <div class="row justify-content-center pb-5 mt-5">
         <h1 class="lg-12">Contact</h1>
         <br>
         <br>
@@ -33,7 +33,7 @@
           <h3>France</h3>
           <h4>+33 1 42 00 11 24</h4>
           <h4>nchican@omacinema.com</h4>
-          <a href="#section2" class="cd-scroll-down btn-primary btn mb-5">Contact Us</a>
+          <a href="#section2" class="cd-scroll-down btn-danger btn mb-5 mt-4">Contact Us</a>
         </div>
         <div id="map1" class="col-12 col-lg-6"  style="width: 500px; height: 300px;" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
         </div>
@@ -51,15 +51,15 @@
               <%= notice %>
               <%= @message.errors.full_messages.join(', ') %>
               <div class="row ml-0 pt-5">
-                <div class="col-xs-6 col-sm-6 pl-0">
+                <div class="col-xs-6 col-sm-6 pl-0 name-contact">
                   <%= f.input :name, placeholder: "name" %>
                 </div>
-                <div class="col-xs-6 col-sm-6 pr-0">
+                <div class="col-xs-6 col-sm-6 pr-0 email-contact">
                   <%= f.input :email, placeholder: 'email' %>
                 </div>
               </div>
               <%= f.input :body, placeholder: 'your message...' %>
-              <%= f.submit 'Send', class: 'btn btn-primary'%>
+              <%= f.submit 'Send', class: 'btn btn-danger'%>
             <% end %>
           </div>
         </div>
