--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -33,7 +33,7 @@
           <h3>France</h3>
           <h4>+33 1 42 00 11 24</h4>
           <h4>nchican@omacinema.com</h4>
-          <a href="#section2" class="cd-scroll-down btn-danger btn mb-5 mt-4">Contact Us</a>
+          <a href="#section2" class="cd-scroll-down btn-outline-danger btn mb-5 mt-4">Contact Us</a>
         </div>
         <div id="map1" class="col-12 col-lg-6"  style="width: 500px; height: 300px;" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
         </div>
@@ -59,7 +59,7 @@
                 </div>
               </div>
               <%= f.input :body, placeholder: 'your message...' %>
-              <%= f.submit 'Send', class: 'btn btn-danger'%>
+              <%= f.submit 'Send', class: 'btn btn-outline-danger'%>
             <% end %>
           </div>
         </div>
