--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -122,22 +122,18 @@
     <div class="mini-title d-flex flex-column justify-content-center ml-4">
       <h3>Team</h3>
     </div>
-    <div class="container">
-      <div class="row justify-content-center mt-5 pt-5">
-        <div class="col-12 col-lg-6 p-5 d-flex align-items-flex-end">
-          <div>
+    <div class="container flex-column" style="max-height: 137vh; margin-bottom: 30px;">
+      <div class="row mt-5 pt-5">
+        <div class="col-12 text-left mt-4">
             <h1>Pierre Chican, Architect</h1>
             <p style="margin-top:30px">Specialized in the realization of cultural arenas and more particularly of cinemas for more than 20 years now, Pierre Chican designed two of the most successful cinema theaters in France : UGC Les Halles (4.5 million tickets sold in 2016) & UGC Bercy (3 million tickets sold in 2016) in Paris and many others projects in France (Pathé La Valette with the first IMAX laser cinema in France) and abroad.</p>
             <img src="../assets/grand_carre.png" alt="croix" class="grand_carre">
-          </div>
         </div>
-        <div class="col-12 col-lg-6 p-5 d-flex align-items-flex-end">
-          <div>
-            <h1>Nicolas Chican, Business Partner</h1>
-            <p  style="margin-top:30px">Nicolas Chican has a Master in Science of Management at EM LYON Business School. He majored in Services Marketing and developed strong skills in the entertainment and tourism industry. During his studies, Nicolas worked on a revenue management oriented solution for cinema tickets.</p>
-            <img src="../assets/carre_gris.png" alt="croix" class="carre_gris">
-          </div>
-        </div>
+       <div class="col-12 text-right">
+          <h1>Nicolas Chican, Business Partner</h1>
+          <p  style="margin-top:30px">Nicolas Chican has a Master in Science of Management at EM LYON Business School. He majored in Services Marketing and developed strong skills in the entertainment and tourism industry. During his studies, Nicolas worked on a revenue management oriented solution for cinema tickets.</p>
+          <img src="../assets/carre_gris.png" alt="croix" class="carre_gris">
+       </div>
       </div>
     </div>
   </section>
