--- a/app/assets/stylesheets/components/_oma.scss
+++ b/app/assets/stylesheets/components/_oma.scss
@@ -37,3 +37,11 @@
     padding-left: 0px;
   }
 }
+
+.fond-experience {
+  background-color: $blue;
+  height: 100vh;
+  position: relative;
+  margin-right: 0px;
+  opacity: 0.8;
+}
