--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -43,34 +43,36 @@
 
   <section id="section1" class="cd-section home1">
     <div class="container justify-content-center">
-      <div class="row justify-content-center">
-        <h1>What is Ōma</h1>
-        <div class="row justify-content-center" style="position: absolute; bottom:5vh;">
-        <a href="#section2" class="cd-scroll-down"><i class="fas fa-chevron-down fa-3x"></i></a>
+      <div class="row text-left">
+        <div class="col-12 titre-home">
+          <h1 style="font-size: 70px; font-weight: bold;"> Spectacular, <br> Intimate, <br> Immersive</h1>
         </div>
+      </div>
+      <div class="row justify-content-center" style="position: absolute; bottom:5vh;">
+        <a href="#section2" class="cd-scroll-down"><i class="fas fa-chevron-down fa-3x"></i></a>
       </div>
     </div>
   </section><!-- cd-section -->
 
   <section id="section2" class="cd-section">
-    <div class="container flex-column justify-content-center">
+    <div class="container flex-column justify-content-center pt-5">
       <div class="row flex-column pb-5">
         <h1 class="pb-4">Ōma, the next cinema</h1>
         <p>The innovative character of the Ōma cinema is based on a new type of architecture that can be summed up in three major transformations:</p>
       </div>
       <div class="row d-flex justify-content-center pt-5">
         <div class="col-12 col-lg-4">
-          <i class="fas fa-bullhorn fa-3x pb-5"></i>
+          <i class="fas fa-bullhorn fa-2x pb-5"></i>
           <h3>Distribution of the seats</h3>
           <p>The spectators are seated on several circular hanging platforms fixed on a sloping metal framework.</p>
         </div>
         <div class="col-12 col-lg-4">
-          <i class="fas fa-comments fa-3x pb-5"></i>
+          <i class="fas fa-comments fa-2x pb-5"></i>
           <h3>Original layout</h3>
           <p>As in theater, each platform forms a box with a few rows of seats accessible by two aisles.</p>
         </div>
         <div class="col-12 col-lg-4">
-          <i class="fas fa-house-damage fa-3x pb-5"></i>
+          <i class="fas fa-house-damage fa-2x pb-5"></i>
           <h3>Positioning of the projector booth</h3>
           <p>Ōma architecture integrates the projector in the structure at the back of the platforms, facing the center of the screen in both directions.</p>
         </div>
@@ -82,11 +84,10 @@
     <div class="container">
       <div class="row flex-row-reverse">
         <div class="fond-foyer d-flex col-12 col-lg-6">
-          <img src="../assets/etoile.png" alt="etoile" class="etoile">
           <div class="container flex-column justify-content-center">
             <div class="row">
               <div class="foyer-text">
-                <h2 class="pb-4">Customization</h2>
+                <h1 class="pb-4">Customization</h1>
                 <div class="tiret"></div>
                   <p class="pt-4">The original configuration of this room also gives you the possibility to offer personalized services:</p>
                   <ul>
@@ -130,26 +131,57 @@
   </section><!-- cd-section -->
 
   <section id="section4" class="cd-section">
-
   </section><!-- cd-section -->
 
   <section id="section5" class="cd-section home3">
-    <div class="container m-0 flex-column p-0">
-      <div class="row">
-        <div class="pl-5 petit-carre-bleu col-12 col-lg-3 d-flex flex-column text-left">
-          <h1 class="pt-5">An optimized projection system</h1>
-          <div class="tiret pt-3"></div>
-        </div>
-      <img src="../assets/grand_carre.png" alt="carre" class="grand_carre_star_wars">
-      </div>
-      <div class="row flex-row-reverse">
-        <div class="grand-carre-bleu col-12 col-lg-4 d-flex align-items-center">
-          <p>The staggered arrangement of the platforms allow for the central positioning of the projector, thus projecting in the best possible way, an image free of any distortion.</p>
+    <div class="container">
+      <div class="row flex-row">
+        <div class="fond-experience d-flex col-12 col-lg-6">
+          <div class="container flex-column justify-content-center">
+            <div class="row">
+              <div class="foyer-text">
+                <h1 class="pb-4">EXPERIENCE</h1>
+                <div class="tiret"></div>
+                  <p class="pt-4">Ōma has been designed to offer viewers an exceptional audio and visual experience</p>
+                  <ul>
+                    <div class="d-flex">
+                      <li class="pb-3 pt-4 d-flex">
+                        <div>
+                          <i class="fas fa-home fa-2x mr-4"></i>
+                        </div>
+                        <div>
+                          <p>Immersive sound System</p>
+                        </div>
+                      </li>
+                    </div>
+                    <div>
+                      <li class="pb-3 d-flex">
+                        <div>
+                         <i class="fas fa-user-friends fa-2x mr-4"></i>
+                        </div>
+                        <div>
+                          <p>Compatible with any type of digital image quality and sound system</p>
+                        </div>
+                      </li>
+                    </div>
+                    <div>
+                      <li class="pb-3 d-flex">
+                        <div>
+                         <i class="fas fa-glass-martini fa-2x mr-4"></i>
+                        </div>
+                        <div>
+                          <p>Optimal projection system</p>
+                        </div>
+                      </li>
+                    </div>
+                  </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
-  </section><!-- cd-section -->
+  </section>
 
   <section id="section6" class="cd-section">
     <div class="container flex-column justify-content-center">
