--- a/app/assets/stylesheets/components/_navbarhome.scss
+++ b/app/assets/stylesheets/components/_navbarhome.scss
@@ -106,6 +106,7 @@ Main components
   text-transform: uppercase;
   font-size: 20px;
   font-size: 1.25rem;
+  font-weight: bold;
 }
 .cd-section p {
   line-height: 1.6;
@@ -117,7 +118,7 @@ Main components
   }
   .cd-section p {
     font-size: 20px;
-    font-size: 1.25rem;
+    font-size: 1rem;
     line-height: 2;
   }
 }
