--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -64,7 +64,7 @@
 <!-- cd-section -->
 
 <section id="section2" class="cd-section section2-articles">
-  <div class="container flex-column justify-content-center">
+  <div class="container flex-column justify-content-center mb-5 mt-5">
     <div class="row flex-column pb-5 mb-5">
       <h1 style="color: #191E55">Press Releases</h1>
     </div>
