--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -138,7 +138,7 @@
     </div>
   </section>
 
-  <section id="section7" class="cd-section" style="background-color:white !important">
+  <section id="section7" class="cd-section" style="background: white;">
     <div class="container flex-column justify-content-center mb-5">
       <a href="/articles" style="position: relative; left: 20%;"><img src="../assets/croix_bleu.png" alt="croix" class="croix_grise_article"></a>
       <h1 style="font-weight: bold; color: #191E55;">Press releases</h1>
