--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12">
-          <i class="fas fa-quote-left fa-7x"></i>
+          <i class="fas fa-quote-left fa-5x"></i>
           <h4>Whereas all the cinemas built for more than 50 years now are similar and reproduce the same seating arrangement of the spectators, this concept of movie theater creates a cinematographic experience at the same time intimate, spectacular and immersive, making Ōma unique in the global cinematographic landscape.</h4>
           <h5 id="pchican">Pierre Chican, CEO</h5>
         </div>
@@ -84,7 +84,7 @@
         <div class="unforget col-12 col-lg-6">
           <h1>AN UNFORGETTABLE EXPERIENCE</h1>
           <p>Much more than just the spectacular nature of the architecture, the original configuration of the room has been designed to offer viewers an exceptional audio and visual experience, projecting an image free of any distortion. Ōma is an experience that you will never forget.</p>
-          <a href="/%C5%8Dma" style="width: 100px; position: relative; left: 56%;"><img src="../assets/croix_grise.png" alt="croix" class="croix_grise"></a>
+          <a href="/%C5%8Dma" style="width: 50px; position: relative; left: 56%;"><img src="../assets/croix_grise.png" alt="croix" class="croix_grise"></a>
         </div>
       </div>
     </div>
@@ -139,9 +139,10 @@
   </section>
 
   <section id="section7" class="cd-section" style="background: white;">
+    <div class="mini-title d-flex flex-column justify-content-center ml-4">
+      <h3 style='color: #191E55'>Press</h3>
+    </div>
     <div class="container flex-column justify-content-center mb-5">
-      <a href="/articles" style="position: relative; left: 20%;"><img src="../assets/croix_bleu.png" alt="croix" class="croix_grise_article"></a>
-      <h1 style="font-weight: bold; color: #191E55;">Press releases</h1>
       <div class="row d-flex justify-content-center align-items-center" style=" height: 35%">
         <% @articles.each do |article| %>
           <div class="carousel-cell col-9 col-lg-3">
