--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,7 +53,8 @@
   <section id="section1" class="cd-section home1">
     <div class="container justify-content-center">
       <div>
-        <img src="/Users/nicolaschican/code/oma-cinema/oma-project/app/assets/logo.png" alt="logo oma" class="logo-oma-home">
+        <%= image_tag 'logo.png', class: 'logo-oma-home' %>
+        <!-- <img src="/Users/nicolaschican/code/oma-cinema/oma-project/app/assets/logo.png" alt="logo oma" class="logo-oma-home"> -->
       </div>
       <div class="row text-left">
         <div class="col-12 titre-home">
