--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -85,7 +85,7 @@
         <div class="unforget col-12 col-lg-6">
           <h1>AN UNFORGETTABLE EXPERIENCE</h1>
           <p>Much more than just the spectacular nature of the architecture, the original configuration of the room has been designed to offer viewers an exceptional audio and visual experience, projecting an image free of any distortion. Ōma is an experience that you will never forget.</p>
-          <a href="/%C5%8Dma" style="width: 50px; position: relative; left: 56%;"><img src="../assets/croix_grise.png" alt="croix" class="croix_grise"></a>
+          <a href="/%C5%8Dma" style="width: 50px; position: relative; left: 56%;"><%= image_tag 'croix_grise.png', class: 'croix_grise' %></a>
         </div>
       </div>
     </div>
@@ -98,8 +98,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12">
-          <img src="../assets/logo_pathe.png" alt="pathe" class="pathe pr-5">
-          <img src="../assets/logo-frenchtech.png" alt="french_tech" class="french-tech pl-5">
+          <%= image_tag 'logo_pathe.png', class: 'pathe pr-5' %>
+          <%= image_tag 'logo-frenchtech.png', class: 'french-tech pl-5' %>
         </div>
       </div>
     </div>
@@ -107,7 +107,7 @@
 
   <section id="section5" class="cd-section home5">
     <div class="container">
-      <a href="/%C5%8Dma" style="position: relative; left: 7%;"><img src="../assets/croix_noire.png" alt="croix" class="croix_noire"></a>
+      <a href="/%C5%8Dma" style="position: relative; left: 7%;"><%= image_tag 'croix_noire.png', class: 'croix_noire' %></a>
       <div class="row">
         <div class="col-lg-6">
         </div>
@@ -128,12 +128,12 @@
         <div class="col-12 text-left mt-4">
             <h1>Pierre Chican, Architect</h1>
             <p style="margin-top:30px">Specialized in the realization of cultural arenas and more particularly of cinemas for more than 20 years now, Pierre Chican designed two of the most successful cinema theaters in France : UGC Les Halles (4.5 million tickets sold in 2016) & UGC Bercy (3 million tickets sold in 2016) in Paris and many others projects in France (Pathé La Valette with the first IMAX laser cinema in France) and abroad.</p>
-            <img src="../assets/grand_carre.png" alt="croix" class="grand_carre">
+            <%= image_tag 'grand_carre.png', class: 'grand_carre' %>
         </div>
        <div class="col-12 text-right">
           <h1>Nicolas Chican, Business Partner</h1>
           <p  style="margin-top:30px">Nicolas Chican has a Master in Science of Management at EM LYON Business School. He majored in Services Marketing and developed strong skills in the entertainment and tourism industry. During his studies, Nicolas worked on a revenue management oriented solution for cinema tickets.</p>
-          <img src="../assets/carre_gris.png" alt="croix" class="carre_gris">
+          <%= image_tag 'carre_gris.png', class: 'carre_gris' %>
        </div>
       </div>
     </div>
