--- a/app/assets/stylesheets/components/_navbarhome.scss
+++ b/app/assets/stylesheets/components/_navbarhome.scss
@@ -199,7 +199,7 @@ Main components
   opacity: 1;
 }
 #cd-vertical-nav a.is-selected .cd-dot {
-  background-color: #d88683;
+  background-color: tomato;
 }
 #cd-vertical-nav .cd-dot {
   position: relative;
