--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,11 +58,11 @@
       </div>
       <div class="row text-left">
         <div class="col-12 titre-home">
-          <h1 style="font-size: 70px; font-weight: bold;"> Ōma, Vertical <br> Cinema <br> concept</h1>
+          <h1 style="font-size: 80px; font-weight: bold; line-height: 130%;"> Ōma, Vertical <br> Cinema <br> concept</h1>
         </div>
       </div>
       <div class="row justify-content-center" style="position: absolute; bottom:5vh;">
-        <a href="#section2" class="cd-scroll-down"><i class="fas fa-chevron-down fa-3x"></i></a>
+        <a href="#section2" class="cd-scroll-down"><i class="fas fa-chevron-down bounce-1 fa-2x"></i></a>
       </div>
     </div>
   </section><!-- cd-section -->
@@ -125,12 +125,12 @@
     </div>
     <div class="container flex-column" style="max-height: 137vh; margin-bottom: 30px;">
       <div class="row mt-5 pt-5">
-        <div class="col-12 text-left mt-4">
+        <div class="col-12 text-left pierre-chican mt-4">
             <h1>Pierre Chican, Architect</h1>
             <p style="margin-top:30px">Specialized in the realization of cultural arenas and more particularly of cinemas for more than 20 years now, Pierre Chican designed two of the most successful cinema theaters in France : UGC Les Halles (4.5 million tickets sold in 2016) & UGC Bercy (3 million tickets sold in 2016) in Paris and many others projects in France (Pathé La Valette with the first IMAX laser cinema in France) and abroad.</p>
-            <%= image_tag 'grand_carre.png', class: 'grand_carre' %>
+            <%= image_tag 'carre_gris.png', class: 'carre_gris' %>
         </div>
-       <div class="col-12 text-right">
+       <div class="col-12 nicolas-chican text-right">
           <h1>Nicolas Chican, Business Partner</h1>
           <p  style="margin-top:30px">Nicolas Chican has a Master in Science of Management at EM LYON Business School. He majored in Services Marketing and developed strong skills in the entertainment and tourism industry. During his studies, Nicolas worked on a revenue management oriented solution for cinema tickets.</p>
           <%= image_tag 'carre_gris.png', class: 'carre_gris' %>
